--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -23,3 +23,16 @@
   box-sizing: border-box;
   height: 42px;
 }
+
+.listItem {
+  list-style: none;
+  padding: 0 8px;
+  display: flex;
+  flex: 0 0 auto;
+  gap: 12px;
+  border: 1px solid rebeccapurple;
+  border-radius: 8px;
+  align-items: center;
+  justify-content: space-between;
+  width: 310px;
+}
