--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -15,3 +15,15 @@
   border-radius: 8px;
   margin: 0;
 }
+
+.errorMessage {
+  color: red;
+  box-sizing: border-box;
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 12px;
+  padding: 0;
+  border-radius: 8px;
+  margin: 0;
+}
